# shift2d

./: .gitignore  CMakeLists.txt  README.md  color_schemes.hpp  horizon_load_dialog.cpp  load_preview_widgets.hpp  main_window.hpp  segy_load_dialog.hpp  segy_writer.cpp  segy_writer.hpp
include/: app_theme.hpp  data_info_dialog.hpp  horizon_load_dialog.hpp  main_window.hpp  segy_reader.hpp  seismic_view.hpp  statics_load_dialog.hpp  types.hpp
resources/: shift2d.qrc
resources/styles/: app.qss
scripts/: prototype.py
src/: app_theme.cpp  color_schemes.cpp  data_info_dialog.cpp  horizon_load_dialog.cpp  load_preview_widgets.cpp  main.cpp  main_window.cpp  segy_load_dialog.cpp  segy_reader.cpp  seismic_view.cpp  statics_load_dialog.cpp
